<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="30dip" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_title"
        android:textSize="18sp" />

    <Button
        android:id="@+id/nmea_filter_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nmea_filter_label" />

    <Button
        android:id="@+id/view_nmealog_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_nmealog_button_label" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_label" />

</LinearLayout>